# newsletter

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  test.ipynb
src/newsletter/: main.py
src/newsletter/config/: newsletter_prompts.py
src/newsletter/core/: newsletter_agent.py
src/newsletter/templates/: newsletter_templates.py
src/newsletter/utils/: image_gen.py  link_fetcher.py
