[project]
name = "newsletter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.13",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "html2text>=2024.2.26",
    "ipykernel>=6.29.5",
    "ipython>=9.0.1",
    "openai>=1.65.4",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "setuptools>=76.0.0",
    "uvicorn>=0.34.0",
]
